add media query rule to footer for screen width 950px and above.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -839,6 +839,12 @@ h1, h2 {
         right: 10px;
     }
 
+/* footer for all pages */
+
+    footer {
+        padding-top: 50px;
+    }
+
     #nav-menu > li > a {
         font-size: 115%;
     }
