alter reviews nav card background pic and change homepage background color.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ footer {
     margin: 0px;
     height: 100vh;
     width: 100%;
-    background: url(../images/sitephotos/Joe2019v2.jpg) no-repeat center center, #BB4F78;
+    background: url(../images/sitephotos/Joe2019v2.jpg) no-repeat center center, #563D4D;
     background-size: 100%;
     background-attachment: fixed;
     padding-top: 45px;
@@ -124,19 +124,19 @@ h2 {
     margin: auto;  
     margin-top: 4%;
     font-size: 70%;
-    background-color: #563D4D;
-    width: 120px;
+    width: 180px;
     padding-left: 10px;
 }
 
 #enter-site-button > a {
     color: #FFDB58;
     font-size: 250%;
-    background-color: #563D4D;
-    border-radius: 5%;
+    background-color: #BB4F78;
+    border-radius: 2%;
     text-decoration: none;
-    margin: auto;
-    width: 120px;
+    margin-left: 10%;
+    width: 140px;
+    padding: 5px 10px;
 }
 
 #enter-site-button > a:hover{
@@ -171,7 +171,7 @@ list-style: none;
     background-color: #EFF3EB;
     font-weight: 400;
     padding: 2%;
-    border-bottom: 1px solid #BB4F78;
+    
 }
 
 .nav-home-card-left, .nav-home-card-right {
@@ -206,26 +206,26 @@ list-style: none;
 }
 
 #card1 {
-    background: url(../images/sitephotos/wholebandjuneball2019.jpg) no-repeat bottom center #BB4F78;
+    background: url(../images/sitephotos/wholebandjuneball2019.jpg) no-repeat bottom center #563D4D;
     background-size: 280%;
     overflow: hidden;
 }
 
 #card2 {
-    background: url(../images/sitephotos/Juneball2019lensflare.jpg) no-repeat bottom center #BB4F78;
+    background: url(../images/sitephotos/Juneball2019lensflare.jpg) no-repeat bottom center #563D4D;
     background-size: 280%;
     overflow: hidden;
 }
 
 #card3 {
-    background: url(../images/sitephotos/brasssection2019.jpg) no-repeat top center #BB4F78;
-    background-size: 150%;
+    background: url(../images/sitephotos/juneball2019groove.jpg) no-repeat center center #563D4D;
+    background-size: 250%;
     overflow: hidden;
 }
 
 #card4 {
-    background: url(../images/sitephotos/Human2018background_1.jpg) no-repeat center center #BB4F78;
-    background-size: 300%;
+    background: url(../images/sitephotos/Human2018background_1.jpg) no-repeat center center #563D4D;
+    background-size: 250%;
     overflow: hidden;
 }
 
@@ -635,7 +635,7 @@ input, textarea {
     margin: 0px;
     height: 100vh;
     width: 100%;
-    background: url(../images/sitephotos/Human2018background_2.jpg) no-repeat center center, #BB4F78;
+    background: url(../images/sitephotos/Human2018background_2.jpg) no-repeat center center, #563D4D;
     background-size: 100%;
     background-attachment: fixed;
     padding-top: 45px;
@@ -650,12 +650,17 @@ h1, h2 {
     font-weight: 500;
 }
 
+#card1, #card2, #card3, #card4 {
+    background-position: center center;
+}
+
+
 #card1, #card2 {
     background-size: 170%;
 }
 
 #card3 {
-    background-size: 80%;
+    background-size: 150%;
 }
 
 #card4 {
@@ -793,7 +798,7 @@ h1, h2 {
 } 
 
 #contact-form {
-    padding: 2%;
+    padding: 5% 2%;
 }
 }
 
@@ -814,6 +819,10 @@ h1, h2 {
         float: none;
         margin: auto;
         margin-bottom: 30px;
+    }
+
+    #card3 {
+        background-size: 142%;
     }
 
     #nav-home > ul > li > a {
@@ -911,6 +920,10 @@ h1, h2 {
     #contact-header-image > img {
         max-width: 200px;
     }
+
+    #contact-form {
+        padding: 5% 2%;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -933,5 +946,14 @@ h1, h2 {
 
     .nav-home-card-left, .nav-home-card-right {
         width: 280px;
+    }
+
+    #card1, #card2 {
+        background-position: bottom center;
+        background-size: 200%;
+    }
+
+    #card3 {
+        background-size: 160%;
     }
 }
