--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,7 @@ h2 {
     width: 50%;
     max-width: 150px;
     max-height: 150px;
+    min-height: 150px;
     text-align: center;
     text-transform: uppercase;
     background-color: #FFDB58;
