remove padding top from contact page img for screen width 950px(+).

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -946,6 +946,7 @@ input, textarea {
 
     #contact-header-image {
         width: 30%;
+        padding-top: 0px;
     }
 
     #contact-header-image > img {
