--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -637,6 +637,16 @@ input, textarea {
 
 /* MEDIA QUERIES */
 
+/* Rules for phone screens with a width less than 320px */
+
+@media screen and (max-width: 320px) {
+    #nav-menu {
+        text-align: center;
+        font-size: 80%;
+        margin: auto;
+    }
+}
+
 /* Rules for screens with a width between 600px and 950px */
 
 @media screen and (min-width: 600px) {
@@ -958,7 +968,7 @@ input, textarea {
     }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1230px) {
 
     #nav-home {
         height: 50vh;
