--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -993,9 +993,7 @@ input, textarea {
         margin: 30px;
     }
 
-    
-
-    #media-section > p, #soundcloud-section > p {
+    #media-header > p, #media-section > p, #soundcloud-section > p {
         font-size: 140%;
         max-width: 800px;
     }
