--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,6 +574,7 @@ list-style: none;
     margin-top: 40px;
     margin-bottom: 80px;
     border-radius: 5%;
+    max-width: 90%;
 }
 
 #review-image2{
@@ -714,7 +715,7 @@ input, textarea {
 @media screen and (max-width: 320px) {
     #nav-menu {
         text-align: center;
-        font-size: 80%;
+        font-size: 90%;
         margin: auto;
     }
 }
