--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -724,189 +724,188 @@ input, textarea {
 
 @media screen and (min-width: 600px) {
 /* home */
-#hero-image {
-    margin: 0px;
-    height: 100vh;
-    width: 100%;
-    background: url(../images/sitephotos/human-2018-hero-image.jpg) no-repeat center center, #563D4D;
-    background-size: 100%;
-    background-attachment: fixed;
-    padding-top: 45px;
-}
+    #hero-image {
+        margin: 0px;
+        height: 100vh;
+        width: 100%;
+        background: url(../images/sitephotos/human-2018-hero-image.jpg) no-repeat center center, #563D4D;
+        background-size: 100%;
+        background-attachment: fixed;
+        padding-top: 45px;
+    }
 
-#logo-text-container{
-    text-align: center;
-    width: 200px;
-}
+    #logo-text-container{
+        text-align: center;
+        width: 200px;
+    }
 
-#logo-text-container > h1 {
-    font-size: 250%;
-}
+    #logo-text-container > h1 {
+        font-size: 250%;
+    }
 
-#logo {
-    padding: 7% 7% 10% 7%;
-}
+    #logo {
+        padding: 7% 7% 10% 7%;
+    }
 
-.nav-home-card-left > p, .nav-home-card-right > p {
-    font-size: 120%;
-    font-weight: 500;
-}
+    .nav-home-card-left > p, .nav-home-card-right > p {
+        font-size: 120%;
+        font-weight: 500;
+    }
 
-#card1, #card2, #card3, #card4 {
-    background-position: center center;
-}
+    #card1, #card2, #card3, #card4 {
+        background-position: center center;
+    }
 
+    #card1, #card2 {
+        background-size: 170%;
+    }
 
-#card1, #card2 {
-    background-size: 170%;
-}
+    #card3 {
+        background-size: 150%;
+    }
 
-#card3 {
-    background-size: 150%;
-}
+    #card4 {
+        background-size: 150%;
+    }
 
-#card4 {
-    background-size: 150%;
-}
+    /* about */
+    #about-header {
+        text-align: center;
+    }
 
-/* about */
-#about-header {
-    text-align: center;
-}
+    #about-header > p {
+        margin: auto;
+        max-width: 540px;
+        padding-top: 20px;
+    }
 
-#about-header > p {
-    margin: auto;
-    max-width: 540px;
-    padding-top: 20px;
-}
+    #about-header > img {
+        max-width: 540px;
+        margin-top: 20px;
+    }
 
-#about-header > img {
-    max-width: 540px;
-    margin-top: 20px;
-}
+    .about-bio, #about-body > hr {
+        max-width: 590px;
+        margin: auto;
+    }
 
-.about-bio, #about-body > hr {
-    max-width: 590px;
-    margin: auto;
-}
+    .about-bio {
+        height: 150px;
+        padding-top: 20px;
+    }
 
-.about-bio {
-    height: 150px;
-    padding-top: 20px;
-}
+    .bio-text {
+        text-align: right;
+        font-size: 130%;
+    }
 
-.bio-text {
-    text-align: right;
-    font-size: 130%;
-}
+    .about-bio-right {
+        text-align: left;
+    }
 
-.about-bio-right {
-    text-align: left;
-}
+    .bio-pic {
+        float: left;
+        margin-left: 5px;
+        max-height: 130px;
+    }
 
-.bio-pic {
-    float: left;
-    margin-left: 5px;
-    max-height: 130px;
-}
+    .about-bio > .bio-pic > img {
+        max-height: 130px;
+    }
 
-.about-bio > .bio-pic > img {
-    max-height: 130px;
-}
+    .about-bio-left.bio-pic {
+        height: 130px;
+    }
 
-.about-bio-left.bio-pic {
-    height: 130px;
-}
+    .about-bio-left.bio-pic {
+        margin-left: 80px;
+    }
 
-.about-bio-left.bio-pic {
-    margin-left: 80px;
-}
+    #bio-pic2 {
+        margin-left: 140px;
+    }
 
-#bio-pic2 {
-    margin-left: 140px;
-}
+    #bio-pic5 {
+        margin-left: 180px;
+    }
 
-#bio-pic5 {
-    margin-left: 180px;
-}
+    /* navbar and logo - all pages except homepage*/
 
-/* navbar and logo - all pages except homepage*/
+    #nav-main {
+        height: 200px;
+    }
 
-#nav-main {
-    height: 200px;
-}
+    #nav-menu > li > a {
+        font-size: 100%;
+    }
 
-#nav-menu > li > a {
-    font-size: 100%;
-}
+    #nav-menu {
+        position: absolute;
+        top: 130px;
+        right: 10px;
+    }
 
-#nav-menu {
-    position: absolute;
-    top: 130px;
-    right: 10px;
-}
+    #nav-logo {
+        max-width: 115px;
+        max-height: 115px;
+    }
 
-#nav-logo {
-    max-width: 115px;
-    max-height: 115px;
-}
+    #nav-logo > h1 {
+        font-size: 150%;
+    }
 
-#nav-logo > h1 {
-    font-size: 150%;
-}
+    #nav-logo > h2 {
+        font-size: 100%;
+    }
 
-#nav-logo > h2 {
-    font-size: 100%;
-}
+    /* media */
 
-/* media */
+    #media-header > ul {
+        font-size: 120%;
+        text-align: center;
+    }
 
-#media-header > ul {
-    font-size: 120%;
-    text-align: center;
-}
+    #media-section > p, #soundcloud-section > p {
+        font-size: 110%;
+        font-weight: 450;
+        max-width: 500px;
+        margin: auto;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
 
-#media-section > p, #soundcloud-section > p {
-    font-size: 110%;
-    font-weight: 450;
-    max-width: 500px;
-    margin: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
+    #soundcloud-card {
+        max-width: 540px;
+    }
 
-#soundcloud-card {
-    max-width: 540px;
-}
+    /* contact */
 
-/* contact */
+    #contact-header-title {
+        float: right;
+        max-width: 40%;
+        max-height: 300px;
+        padding-top: 20px;
+        padding-right: 10%;
+        font-size: 145%;
+    }
 
-#contact-header-title {
-    float: right;
-    max-width: 40%;
-    max-height: 300px;
-    padding-top: 20px;
-    padding-right: 10%;
-    font-size: 145%;
-}
+    #contact-header-image {
+        float: left;
+        width: 35%;
+        padding-top: 20px;
+        padding-left: 15%;
+        padding-bottom: 5%;
+    }
 
-#contact-header-image {
-    float: left;
-    width: 35%;
-    padding-top: 20px;
-    padding-left: 15%;
-    padding-bottom: 5%;
-}
+    #contact-header-image > img {
+        width: 60%;
+        float: right;
+        padding-right: 10%;
+    } 
 
-#contact-header-image > img {
-    width: 60%;
-    float: right;
-    padding-right: 10%;
-} 
-
-#contact-form {
-    padding: 5% 2%;
-}
+    #contact-form {
+        padding: 5% 2%;
+    }
 }
 
 /* Rules for homepage nav on a tablet */
@@ -987,6 +986,25 @@ input, textarea {
         font-size: 120%;
     }
 
+/* Home */
+    #home-header {
+        width: 100%;
+        height: 100%;
+        background-image: url(../images/sitephotos/durham-castle-at-night.jpg);
+        background-size: 100%;
+        background-attachment: fixed;
+    }
+
+    #hero-image {
+        background: url(../images/sitephotos/human-2018-hero-image.jpg) no-repeat center center #563D4D;
+        background-size: 40%;
+        background-attachment: fixed;
+        max-width: 600px;
+        max-height: 80%;
+        margin: auto;
+        border: 3px solid #FFDB58;
+    }
+
 /* About */
 
     #about-header > h2 {
@@ -1052,10 +1070,6 @@ input, textarea {
         border-radius: 2%;
         background-color: #acb7bb;
     }
-
-   /* #review-image1 > img, #review-image3 > img {
-       height: 100%;
-    }*/
 
     .reviews-section {
         min-height: 150vh;
