--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -631,10 +631,12 @@ list-style: none;
     max-width: 40%;
     padding-left: 10%;
     padding-top: 30px;
+    overflow: hidden;
+    max-height: 80%;
 }
 
-#contact-header-image > img {
-    width: 90%;
+#contact-header-image > picture > img {
+    max-width: 90%;
     padding-left: 5px;
     max-height: 280px;
 }
