add a max-width rule for home cards 1230px(+)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1171,6 +1171,7 @@ input, textarea {
 
     .nav-home-card-left, .nav-home-card-right {
         width: 280px;
+        max-width: 20%;
     }
 
     #card1, #card2 {
