adjust margin on contact form elements.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -671,7 +671,9 @@ label {
 }
 
 input, textarea {
-    margin: 10px 5px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
     font-family: Commissioner, sans-serif;
     font-weight: 600;
     color: #563D4D;
