--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1049,6 +1049,7 @@ input, textarea {
         max-height: 80%;
         margin: auto;
         border: 3px solid #FFDB58;
+        color: #BB4F78;
     }
 
 /* About */
