Fix: alter colors as in previous commit but for media cards which were missed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -479,7 +479,7 @@ h1, h2 {
     height: 180px;
     width: 290px;
     margin: auto;
-    background-color: #BB4F78;
+    background-color: #8C3657;
     margin: auto;
     padding-top: 35px;
     border-radius: 2%;
@@ -500,7 +500,7 @@ h1, h2 {
 #soundcloud-card {
     height: 300px;
     width: 90%;
-    background-color: #BB4F78;
+    background-color: #8C3657;
     margin: auto;
     padding-top: 40px;
     border-radius: 2%;
