Fix: add max-width rule to contact form textarea.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -676,6 +676,7 @@ input, textarea {
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
+    max-width: 265px;
     font-family: Commissioner, sans-serif;
     font-weight: 600;
     color: #563D4D;
